--- a/calendar/src/app/components/modal/modal.component.html
+++ b/calendar/src/app/components/modal/modal.component.html
@@ -1,11 +1,19 @@
-<div (click)="toggleModal()" (keyup)="closeModal($event)" class="fixed inset-0 opacity-80 bg-slate-900"></div>
-<div class="flex flex-col fixed inset-x-96 inset-y-32 px-28 py-20 bg-white dark:bg-slate-700 rounded-3xl overflow-x-hidden overflow-y-scroll">
+<div (click)="toggleModal()" class="fixed inset-0 opacity-80 bg-slate-900"></div>
+<div class="
+  flex 
+  flex-col 
+  fixed 
+  inset-x-96 inset-y-32 
+  px-28 py-20 
+  bg-white dark:bg-slate-700 
+  rounded-3xl 
+  overflow-x-hidden overflow-y-scroll">
   <div class="flex justify-between">
     <div class="mb-10 text-xl">
       <h1 class="text-4xl font-bold">Reminders</h1>
       <p class="opacity-60">{{ curDate.day | dateString: curDate.monthIndex : curDate.year }}</p>
     </div>
-    <app-button (click)="handleAddReminder()" displayText="{{addReminderOpen ? 'Done' : '+ Add Reminder'}}" extraClasses="bg-indigo-500 text-white hover:bg-indigo-600"></app-button>
+    <app-button (click)="handleAddReminder()" displayText="{{addReminderOpen ? 'Cancel' : '+ Add Reminder'}}" extraClasses="{{addReminderOpen ? 'bg-slate-500 dark:bg-slate-600' : 'bg-indigo-500'}} text-white hover:bg-indigo-600"></app-button>
   </div>
   <div *ngIf="addReminderOpen" class="
     flex 
@@ -19,24 +27,24 @@
       border-2
       bg-slate-200
       dark:bg-slate-700 
-      dark:border 
-      dark:border-slate-500 
-      p-4 w-40 
+      dark:border-2
+      border-slate-400 
+      p-3 w-40 
       rounded-2xl">
     <select [(ngModel)]="newReminderTagValue" class="
       cursor-pointer 
       bg-slate-200
       dark:bg-slate-700 
-      dark:border 
-      dark:border-slate-500 
+      dark:border-2
+      dark:border-slate-400 
       rounded-2xl 
-      p-4 ml-4">
+      p-3 ml-4">
       <option value="" disabled selected>Tag</option>
       <option *ngFor="let tag of tags" value="{{tag.value}}" class="{{tag.value}}">
         {{tag.color}}
       </option>
     </select>
-    <div class="flex justify-between items-end w-full border-b-2 border-slate-500 dark:border-slate-300 pb-2 ml-6">
+    <div class="flex justify-between items-end w-full border-b-2 border-slate-400 pb-2 ml-6">
       <input type="text" class="
         outline-0
         transition-all
@@ -45,15 +53,15 @@
         mr-4
         w-full
         text-2xl" 
-        placeholder="Meeting with stakeholders..." 
+        placeholder="{{randomPlaceholder}}" 
         required
         maxlength="30" 
         #newReminder 
         id="newReminder" 
         [(ngModel)]="newReminderInputValue" (keyup.enter)="onEnterReminder($event)" (keydown)="checkReminderLength($event)">
       <span class="mr-3 opacity-30">{{newInputReminderLen}}/30</span>
-      <span class="transition-all duration-300 cursor-pointer material-symbols-outlined scale-125 hover:scale-95" (click)="addNewReminder(newReminder.value)">done</span>
     </div>
+    <app-button class="flex" extraClasses="transition-all duration-300 bg-indigo-500 ml-6 text-white hover:bg-indigo-600 items-center" iconPos="before" icon="done" (click)="addNewReminder(newReminder.value)"></app-button>
   </div>
   <div *ngFor="let reminder of reminders">
     <app-reminder [reminders]="reminders" (editRemindersEvent)="updateReminders()" 
