--- a/calendar/src/app/app.component.html
+++ b/calendar/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="{{darkMode ? 'dark' : ''}}">
-  <div class="min-h-screen h-full text-slate-800 dark:bg-slate-900 dark:text-slate-200">
+  <div class="h-full text-slate-800 dark:bg-slate-900 dark:text-slate-200">
     <app-content (darkModeEvent)="toggleDarkMode($event)"></app-content>
   </div>
 </div>
