--- a/calendar/src/app/components/button/button.component.html
+++ b/calendar/src/app/components/button/button.component.html
@@ -1,7 +1,8 @@
 <button type="button" class="
   flex 
   transition-all 
-  justify-center 
+  justify-center
+  items-center
   duration-200 
   ease-in-out  
   rounded-md 
