--- a/calendar/src/app/components/content/content.component.html
+++ b/calendar/src/app/components/content/content.component.html
@@ -1,23 +1,23 @@
-<div class="container mx-auto flex flex-col justify-center pb-10">
-  <div class="flex justify-between pt-8 pb-5">
-    <div class="flex items-center">
+<div class="container min-h-screen mx-auto flex flex-col justify-center align-center pb-10 px-2">
+  <div class="flex flex-wrap sm:flex-nowrap justify-around sm:justify-between pt-8 mb-4 pb-5">
+    <div class="flex items-center order-1 sm:order-1">
       <img src="assets/logo-keeps-e1655215423655-removebg-preview.png" class="w-32"/>
       <p class="text-indigo-900 dark:text-purple-300" [style]="{'margin-bottom':'8px', 'font-size': '2rem'}">calendar</p>
     </div>
-    <div class="flex items-center mr-32">
+    <div class="flex flex-wrap sm:flex-nowrap basis-full sm:basis-1/3 justify-around md:justify-between items-center order-3 sm:order-2 mt-32 lg:mr-16 sm:mt-0">
       <app-button 
           (click)="prevMonth()"
-          extraClasses="bg-indigo-800 text-white dark:bg-purple-500 hover:bg-indigo-900 dark:hover:bg-purple-600 scale-75 opacity-70 hover:opacity-100 dark:opacity-100 rounded-xl" iconPos="before" icon="chevron_left"></app-button>
-      <h1 class="text-3xl font-bold text-center" [style]="{'min-width':'246px'}">{{curDate.monthIndex | month}}<span class="text-3xl font-normal">{{curDate.year}}</span></h1>
+          extraClasses="bg-indigo-800 text-white dark:bg-purple-500 hover:bg-indigo-900 dark:hover:bg-purple-600 scale-95 opacity-70 hover:opacity-100 dark:opacity-100 rounded-xl" iconPos="before" icon="chevron_left"></app-button>
+      <h1 class="text-3xl font-bold text-center">{{curDate.monthIndex | month}}<span class="text-3xl font-normal">{{curDate.year}}</span></h1>
       <app-button 
         (click)="nextMonth()"
-        extraClasses="bg-indigo-800 text-white dark:bg-purple-500 hover:bg-indigo-900 dark:hover:bg-purple-600 scale-75 opacity-70 hover:opacity-100 dark:opacity-100 rounded-xl" iconPos="after" icon="chevron_right"></app-button>
+        extraClasses="bg-indigo-800 text-white dark:bg-purple-500 hover:bg-indigo-900 dark:hover:bg-purple-600 scale-95 opacity-70 hover:opacity-100 dark:opacity-100 rounded-xl" iconPos="after" icon="chevron_right"></app-button>
     </div>
-    <div>
-      <app-button extraClasses="bg-indigo-800 hover:bg-indigo-900 hover:opacity-100 text-white opacity-70 dark:bg-purple-500 dark:hover:bg-purple-600 dark:text-yellow-300 dark:opacity-100" icon="{{darkMode ? 'light_mode' : 'dark_mode'}}" iconPos="before" (click)="toggleDarkMode()"></app-button>
+    <div class="flex order-2 sm:order-3 items-center">
+      <app-button class="pb-1" extraClasses="bg-indigo-800 hover:bg-indigo-900 hover:opacity-100 text-white opacity-70 scale-95 dark:bg-purple-500 dark:hover:bg-purple-600 hover:text-yellow-300 dark:opacity-100" icon="{{darkMode ? 'light_mode' : 'dark_mode'}}" iconPos="before" (click)="toggleDarkMode()"></app-button>
     </div>
   </div>
-  <div class="grid grid-cols-7 pb-6 opacity-30">
+  <div class="grid grid-cols-7 pb-2 opacity-30">
     <p>Sun</p>
     <p>Mon</p>
     <p>Tue</p>
