--- a/calendar/src/app/components/content/content.component.html
+++ b/calendar/src/app/components/content/content.component.html
@@ -1,10 +1,10 @@
-<div class="container min-h-screen mx-auto flex flex-col justify-center align-center pb-10 px-2">
+<div class="container min-h-screen mx-auto flex flex-col justify-start align-center pb-10 px-2">
   <div class="flex flex-wrap sm:flex-nowrap justify-around sm:justify-between pt-8 mb-4 pb-5">
     <div class="flex items-center order-1 sm:order-1">
       <img src="assets/logo-keeps-e1655215423655-removebg-preview.png" class="w-32"/>
       <p class="text-indigo-900 dark:text-purple-300" [style]="{'margin-bottom':'8px', 'font-size': '2rem'}">calendar</p>
     </div>
-    <div class="flex flex-wrap sm:flex-nowrap basis-full sm:basis-1/3 justify-around md:justify-between items-center order-3 sm:order-2 mt-32 lg:mr-16 sm:mt-0">
+    <div class="flex flex-wrap sm:flex-nowrap basis-full sm:basis-1/3 md:basis-2/5 justify-around md:justify-between items-center order-3 sm:order-2 mt-20 lg:mr-16 sm:mt-0">
       <app-button 
           (click)="prevMonth()"
           extraClasses="bg-indigo-800 text-white dark:bg-purple-500 hover:bg-indigo-900 dark:hover:bg-purple-600 scale-95 opacity-70 hover:opacity-100 dark:opacity-100 rounded-xl" iconPos="before" icon="chevron_left"></app-button>
@@ -28,7 +28,7 @@
   </div>
   <div class="grid grid-cols-7">
     <div *ngFor="let i of [].constructor(dayDiff ?? 0)" class="bg-slate-800 m-1 dark:opacity-40 opacity-10 rounded-xl"></div>
-    <div *ngFor="let day of [].constructor(curMonthLength); let i = index;" class="h-full">
+    <div *ngFor="let day of [].constructor(curMonthLength); let i = index;" class="h-16 sm:h-24 md:h-28 lg:h-32 2xl:h-40 m-1">
       <app-day 
         (click)="toggleModal()"
         (click)="selectCard(i + 1)"
