--- a/calendar/src/app/components/day/day.component.html
+++ b/calendar/src/app/components/day/day.component.html
@@ -35,5 +35,5 @@
       </p>
     </div>
   </div>
-  <p *ngIf="todaysReminders!.length > 2" class="text-xs hidden lg:flex flex-col">{{todaysReminders && todaysReminders.length - 2}} more...</p>
+  <p *ngIf="todaysReminders!.length > 2" class="text-xs hidden text-slate-300 lg:flex flex-col">{{todaysReminders && todaysReminders.length - 2}} more...</p>
 </div>
