--- a/calendar/src/app/components/reminder/reminder.component.html
+++ b/calendar/src/app/components/reminder/reminder.component.html
@@ -60,7 +60,7 @@
       </div>
       <div class="flex justify-between gap-3">
         <app-button class="basis-4/6 flex justify-center" extraClasses="w-full transition-all duration-300 bg-indigo-500 text-white hover:bg-indigo-600" iconPos="before" icon="done" (click)="submitEditReminder(editReminder.value, id)"></app-button>
-        <app-button class="basis-1/6" (click)="handleCancelEditReminder()" displayText="Cancel" extraClasses="w-full bg-slate-600 text-white hover:bg-indigo-500"></app-button>
+        <app-button class="basis-1/6" (click)="handleCancelEditReminder()" displayText="Cancel" extraClasses="w-full h-full bg-slate-600 text-white hover:bg-indigo-500"></app-button>
       </div>
     </div>
   </div>
